# python-sdk

./: .dockerignore  .gitignore  CLAUDE.md  CONTAINER.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  NPM_WORKFLOW.md  README.md  README_RUBY_CLIENT.md  SECURITY.md  build.sh  connect_mcp.rb  docker-compose.yml  examples_ruby_mcp.rb  index.html  package.json  pyproject.toml
.github/: SECURITY_CONFIG.md  SSH_SETUP.md
.github/workflows/: container.yml  deploy-github-pages.yml  main-checks.yml  multi-language-examples.yml  publish-docs-manually.yml  publish-pypi.yml  pull-request-checks.yml  shared.yml
.github/workflows/6Sense/: run.yml
docs/: SSH_DEPLOYMENT.md
docs/demo/: index.html  mcp-demo.css
examples/fastmcp/: bank_data.py
examples/multi-lang/: IMPLEMENTATION_SUMMARY.md  README.md  test-examples.sh
examples/multi-lang/docker/: Dockerfile  docker-compose.yml
examples/multi-lang/html/: example-docs.html
examples/multi-lang/json/: client-config.json  server-config.json
examples/multi-lang/kotlin/: McpClient.kt
examples/multi-lang/powershell/: mcp-setup.ps1
examples/multi-lang/python/: example_server.py
examples/multi-lang/ruby/: mcp_client.rb
examples/ruby/: Gemfile  README.md  mcp_client.rb
examples/servers/tech-models-api/: README.md  pyproject.toml
examples/servers/tech-models-api/mcp_tech_models_api/: __init__.py  __main__.py  server.py
examples/snippets/servers/: ssh_deployment_config.py
scripts/: build.sh  update_readme_snippets.py
tests/: test_examples.py
tests/scripts/: __init__.py  test_update_readme_snippets.py
(+6 files in other folders)
