[project]
name = "mcp-tech-models-api"
version = "0.1.0"
description = "MCP Technology Models API Server with comprehensive features and secure authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "click>=8.0.0",
]

[project.scripts]
mcp-tech-models-api = "mcp_tech_models_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_tech_models_api"]

[tool.uv.sources]
mcp = { workspace = true }
